# nova-example-project

apps/your-nova-app/: .nova  Dockerfile  README.md  pyproject.toml
apps/your-nova-app/your_nova_app/: __init__.py  __main__.py  app.py
apps/your-nova-app/your_nova_app/programs/: moveabit.py
apps/your-nova-typescript-app/: .gitignore  .nova  README.md  package-lock.json  package.json
apps/your-nova-typescript-app/src/: getWandelApi.ts
apps/your-nova-typescript-app/src/templates/Placeholder/: WandelAppPlaceholder.tsx
